DPO-2052 Liikennetiedotteiden aluegeometrian konvertointi ei aina onnistu